# Office-PowerPoint-MCP-Server

./: .env.example  .gitignore  Dockerfile  README.md  config.py  ppt_mcp_server.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup_mcp.py  validate_dependencies.py
scripts/: validate_dependencies.py
src/: __init__.py
src/office_ppt_mcp/: __init__.py
src/office_ppt_mcp/adapters/: __init__.py  file_adapter.py  template_adapter.py
src/office_ppt_mcp/ppt/: content_tools.py  presentation_tools.py  professional_tools.py  structural_tools.py  template_tools.py
src/office_ppt_mcp/protocol/: __init__.py  mcp_server.py  server.py
src/office_ppt_mcp/services/: __init__.py  content.py  design.py  presentation.py  template.py
src/office_ppt_mcp/utils/: template_utils.py
tests/: __init__.py  test_modular_structure.py
tools/: structural_tools.py  template_tools.py
utils/: validation_utils.py
