[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "office-powerpoint-mcp-server"
version = "2.0.6"
description = "MCP Server for PowerPoint manipulation using python-pptx - Consolidated Edition"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "GongRzhe", email = "gongrzhe@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "python-pptx==1.0.2",
    "mcp[cli]==1.13.1",
    "Pillow==11.3.0",
    "fonttools==4.59.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/GongRzhe/Office-PowerPoint-MCP-Server.git"
"Bug Tracker" = "https://github.com/GongRzhe/Office-PowerPoint-MCP-Server.git/issues"

[tool.hatch.build.targets.wheel]
only-include = ["ppt_mcp_server.py", "tools/", "utils/", "enhanced_slide_templates.json", "slide_layout_templates.json"]
sources = ["."]

[tool.hatch.build]
exclude = [
  "public/demo.mp4",
  "public/demo.gif",
  "*.pptx"
]

[project.scripts]
ppt_mcp_server = "ppt_mcp_server:main"